--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,12 @@ jobs:
       - name: SSH into EC2, clone repo, and install deps
         run: |
           ssh -i key.pem -o StrictHostKeyChecking=no ubuntu@34.224.149.65 << EOF
-            source ~/.bashrc
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+
+            echo "🔍 Node: $(which node)"
+            echo "🔍 NPM: $(which npm)"
+            echo "🔍 PM2: $(which pm2)"
             rm -rf chat-app
             git clone https://${{ secrets.GH_PAT }}@github.com/surendrakumar6350/chat-app.git
             cd chat-app
