--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,17 +21,12 @@ jobs:
 
       - name: SSH into EC2, clone repo, and install deps
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -tt ubuntu@34.224.149.65 << 'EOF'
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-
-            echo "🔍 Node: $(which node)"
-            echo "🔍 NPM: $(which npm)"
-            echo "🔍 PM2: $(which pm2)"
+          ssh -i key.pem -o StrictHostKeyChecking=no -tt ubuntu@${{ secrets.S_IP }} << 'EOF'
             rm -rf chat-app
             git clone https://${{ secrets.GH_PAT }}@github.com/surendrakumar6350/chat-app.git
             cd chat-app
             npm install
             pm2 start npm --name "chat-app" -- run start
-            echo "✅ Repo cloned, installed and started"
+            echo "✅ deployed successfully"
+            exit 0
           EOF
