chore: videoCall feature added php server removed

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,31 +1,2 @@
-# Ignore Composer dependencies
-/vendor/
-
-# Ignore Composer lock file if you want only composer.json tracked
-# (optional, usually you include composer.lock)
-/composer.lock
-
-# Ignore system files
-.DS_Store
-Thumbs.db
-
-# Ignore log files
-*.log
-
-# Ignore OS generated files
-ehthumbs.db
-Icon?
-desktop.ini
-
-# Ignore XAMPP or local server files if any
-xampp/
-
-# Ignore IDE/editor configs
-.vscode/
-.idea/
-*.sublime-workspace
-*.sublime-project
-
-# Ignore environment/config files (if you add any)
-.env
-.env.local
+node_modules
+package-lock.json
