--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,21 @@
 {
   "name": "socket-server",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
+    "start": "npx tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@types/node": "^22.14.1",
+    "@types/ws": "^8.18.1",
+    "typescript": "^5.8.3"
+  },
   "dependencies": {
-    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
   }
