--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "prisma": "^6.6.0",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
   }
