--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
           ssh -i key.pem -o StrictHostKeyChecking=no -tt ubuntu@${{ secrets.S_IP }} << 'EOF'
             rm -rf chat-app
             git clone https://${{ secrets.GH_PAT }}@github.com/surendrakumar6350/chat-app.git
+            cp .env chat-app/server/.env
             cd chat-app
             npm install
             pm2 delete chat-app
