--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "leo-profanity": "^1.7.0",
     "prisma": "^6.6.0",
     "uuid": "^11.1.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "zod": "^3.24.3"
   }
 }
